[package]
name = "read-at"
version = "0.1.1"
authors = ["Horiuchi Satoshi <s-horiuchi@advaly.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
clap = "3.0.12"

[profile.dev]
incremental = true

[profile.release]
opt-level = "z"
lto = true
strip = true
